--- a/src/feihe/scss/index.scss
+++ b/src/feihe/scss/index.scss
@@ -13,18 +13,19 @@ html,body{
 }
 // page通用样式
 .page {
-	display: none;
+	// display: none;
 	position: absolute;
 	left: 0;
 	top: 0;
 	z-index: 10;
 	width: 100%;
 	height: 100%;
+	background: url(../images/loadingBg.png) #000000 no-repeat center top/cover;
 }
 // 加载页
 .loading{
 	z-index: 11;
-	background: url(../images/loadingBg.png) #000000 no-repeat center top/100%;
+	background-image: url(../images/loadingBg.png);
 	.loadingTitle{
 		position: absolute;
 		bottom: 7.6%;
@@ -32,15 +33,34 @@ html,body{
 		width: 100%;
 		img{
 			display: block;
-			width: 2.76rem;
 			margin: 0 auto;
+		}
+		.loading-circle{
+			position: relative;
+			width: .8rem;
+			height: .8rem;
+			margin: 0 auto .32rem;
+			font-size: .48rem;
+			color: #e6392a;
+			span{
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				text-align: center;
+				line-height: .8rem;
+			}
+		}
+		.loading1{
+			width: 2.72rem;
 		}
 	}
 }
 // 简介页
 .brief{
 	z-index: 11;
-	background: url(../images/briefBg.png) #000000 no-repeat center top/100%;
+	background-image: url(../images/briefBg.png);
 	img{
 		display: block;
 		width: 100%;
@@ -92,7 +112,7 @@ html,body{
 // 填写讯页
 .message{
 	z-index: 11;
-	background: url(../images/briefBg.png) #000000 no-repeat center top/100%;
+	background-image: url(../images/briefBg.png);
 	img{
 		display: block;
 		width: 100%;
@@ -218,9 +238,8 @@ html,body{
 }
 // 模板页
 .templet{
-	display: block;
 	z-index: 11;
-	background: url(../images/briefBg.png) #000000 no-repeat center top/100%;
+	background-image: url(../images/briefBg.png);
 	img{
 		display: block;
 		width: 100%;
@@ -286,6 +305,7 @@ html,body{
 		position: absolute;
 		top: 15.5%;
 		left: 50%;
+		z-index: 1;
 		// width: 11.72rem;
 		// height: 17.2rem;
 		width: 10.74rem;
@@ -326,9 +346,100 @@ html,body{
 // 分享页
 .share{
 	z-index: 11;
-	background: url(../images/shareBg.png) #000000 no-repeat center top/100%;
+	background-image: url(../images/shareBg.png);
 	img{
 		display: block;
 		width: 100%;
+	}
+	.share-cloud2{
+		position: absolute;
+		top: 42.7%;
+		right: 0;
+		width: 4.4rem;
+	}
+	.result{
+		position: absolute;
+		top: 9.2%;
+		left: 50%;
+		transform: translate3d(-50%,0,0);
+		width: 10.8rem;
+	}
+	.share-cloud1{
+		position: absolute;
+		top: 13.8%;
+		left: 0;
+		width: 3.28rem;
+	}
+	.share-pine{
+		position: absolute;
+		top: o;
+		right: 0;
+		width: 8.4rem;
+	}
+	.share-logo{
+		position: absolute;
+		top: 1.4%;
+		left: 3.2%;
+		width: 3.36rem;
+	}
+	.share-stone{
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+	}
+	.share-crane{
+		position: absolute;
+		bottom: 10.4%;
+		right: 0;
+		width: 4.2rem;
+	}
+	.share-mushroom{
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		width: 100%;
+	}
+	.share-btn{
+		position: absolute;
+		bottom: 0;
+		left: 50%;
+		transform: translate3d(-50%,0,0);
+		width: 8.88rem;
+	}
+	.share-save{
+		position: absolute;
+		bottom: 18.2%;
+		left: 50%;
+		transform: translate3d(-50%,0,0);
+		width: 3.4rem;
+	}
+}
+// 分享遮罩页
+.cover{
+	display: none;
+	z-index: 12;
+	background-color: rgba(0,0,0,.8);
+	img{
+		display: block;
+		width: 100%;
+	}
+	.cover-light{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+	}
+	.cover-cloud{
+		position: absolute;
+		top: 5.4%;
+		right: 0;
+		width: 4.96rem;
+	}
+	.cover-crane{
+		position: absolute;
+		top: 0.9%;
+		right: 12%;
+		width: 2.24rem;
 	}
 }
