--- a/src/feihe/css/index.css
+++ b/src/feihe/css/index.css
@@ -1602,15 +1602,23 @@ html, body { width: 100%; height: 100%; overflow: hidden; background: #ffffff; }
 
 .templet .arrow-right { position: absolute; top: 46.6%; right: 3.4%; width: .88rem; }
 
-.templet .upload-area { position: absolute; top: 15.5%; left: 50%; z-index: 1; width: 10.74rem; height: 16.32rem; -webkit-transform: translate3d(-50%, 0, 0); transform: translate3d(-50%, 0, 0); }
+.templet .uploadBox { position: absolute; top: 15.5%; left: 50%; z-index: 1; width: 10.74rem; height: 16.32rem; -webkit-transform: translate3d(-50%, 0, 0); transform: translate3d(-50%, 0, 0); }
 
-.templet .upload-area .upload-box { position: absolute; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; }
+.templet .uploadBox .swiper-container { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
-.templet .upload-area .upload-box .templetBg { display: block; width: 100%; }
+.templet .uploadBox .swiper-container .upload-area { width: 100%; height: 100%; }
 
-.templet .upload-area .templetImg { position: absolute; top: 0; left: 0; z-index: 2; width: 100%; height: 100%; }
+.templet .uploadBox .swiper-container .upload-area .upload-box { position: absolute; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; }
 
-.templet .upload-area .fileUpload { position: absolute; left: 0; top: 0; z-index: 5; display: block; width: 100%; height: 100%; opacity: 0; }
+.templet .uploadBox .swiper-container .upload-area .upload-box .templetBg { display: block; max-width: 100%; width: auto; }
+
+.templet .uploadBox .swiper-container .upload-area .upload-box.upload-box1 { background: url(../images/templet-upload2.png) no-repeat center center/100%; }
+
+.templet .uploadBox .swiper-container .upload-area .upload-box.upload-box2 { background: url(../images/templet-upload2.png) no-repeat center center/100%; }
+
+.templet .uploadBox .swiper-container .upload-area .templetImg { position: absolute; top: 0; left: 0; z-index: 2; width: 100%; height: 100%; }
+
+.templet .uploadBox .fileUpload { position: absolute; left: 0; top: 0; z-index: 5; display: block; width: 100%; height: 100%; opacity: 0; }
 
 .share { z-index: 11; background-image: url(../images/shareBg.png); }
 
@@ -1618,17 +1626,17 @@ html, body { width: 100%; height: 100%; overflow: hidden; background: #ffffff; }
 
 .share .share-cloud2 { position: absolute; top: 42.7%; right: 0; width: 4.4rem; }
 
-.share .result { position: absolute; top: 9.2%; left: 50%; -webkit-transform: translate3d(-50%, 0, 0); transform: translate3d(-50%, 0, 0); width: 10.8rem; }
+.share .result { position: absolute; top: 9.2%; left: 50%; z-index: 1; -webkit-transform: translate3d(-50%, 0, 0); transform: translate3d(-50%, 0, 0); width: 10.8rem; }
 
 .share .share-cloud1 { position: absolute; top: 13.8%; left: 0; width: 3.28rem; }
 
-.share .share-pine { position: absolute; top: o; right: 0; width: 8.4rem; }
+.share .share-pine { position: absolute; top: o; right: 0; z-index: 2; width: 8.4rem; }
 
 .share .share-logo { position: absolute; top: 1.4%; left: 3.2%; width: 3.36rem; }
 
 .share .share-stone { position: absolute; bottom: 0; left: 0; width: 100%; }
 
-.share .share-crane { position: absolute; bottom: 10.4%; right: 0; width: 4.2rem; }
+.share .share-crane { position: absolute; bottom: 10.4%; right: 0; z-index: 12; width: 4.2rem; }
 
 .share .share-mushroom { position: absolute; bottom: 0; right: 0; width: 100%; }
 
