--- a/src/feihe/scss/index.scss
+++ b/src/feihe/scss/index.scss
@@ -301,35 +301,68 @@ html,body{
 		right: 3.4%;
 		width: .88rem;
 	}
-	.upload-area{
+	.uploadBox{
 		position: absolute;
 		top: 15.5%;
 		left: 50%;
 		z-index: 1;
-		// width: 11.72rem;
-		// height: 17.2rem;
 		width: 10.74rem;
 		height: 16.32rem;
 		transform: translate3d(-50%,0,0);
-		.upload-box{
+		.swiper-container{
 			position: absolute;
 			top: 0;
 			left: 0;
-			z-index: 1;
 			width: 100%;
 			height: 100%;
-			.templetBg{
-				display: block;
+			.upload-area{
+				// position: absolute;
+				// top: 15.5%;
+				// left: 50%;
+				// z-index: 1;
+				// width: 10.74rem;
+				// height: 16.32rem;
+				// transform: translate3d(-50%,0,0);
 				width: 100%;
+				height: 100%;
+				.upload-box{
+					position: absolute;
+					top: 0;
+					left: 0;
+					z-index: 1;
+					width: 100%;
+					height: 100%;
+					.templetBg{
+						display: block;
+						max-width: 100%;
+						width: auto;
+					}
+					&.upload-box1{
+						background: url(../images/templet-upload2.png) no-repeat center center/100%;
+					}
+					&.upload-box2{
+						background: url(../images/templet-upload2.png) no-repeat center center/100%;
+					}
+				}
+				.templetImg{
+					position: absolute;
+					top: 0;
+					left: 0;
+					z-index: 2;
+					width: 100%;
+					height: 100%;
+				}
+				// .fileUpload{
+				// 	position: absolute;
+				// 	left: 0;
+				// 	top: 0;
+				// 	z-index: 5;
+				// 	display: block;
+				// 	width: 100%;
+				// 	height: 100%;
+				// 	opacity: 0;
+				// }
 			}
-		}
-		.templetImg{
-			position: absolute;
-			top: 0;
-			left: 0;
-			z-index: 2;
-			width: 100%;
-			height: 100%;
 		}
 		.fileUpload{
 			position: absolute;
@@ -361,6 +394,7 @@ html,body{
 		position: absolute;
 		top: 9.2%;
 		left: 50%;
+		z-index: 1;
 		transform: translate3d(-50%,0,0);
 		width: 10.8rem;
 	}
@@ -374,6 +408,7 @@ html,body{
 		position: absolute;
 		top: o;
 		right: 0;
+		z-index: 2;
 		width: 8.4rem;
 	}
 	.share-logo{
@@ -392,6 +427,7 @@ html,body{
 		position: absolute;
 		bottom: 10.4%;
 		right: 0;
+		z-index: 12;
 		width: 4.2rem;
 	}
 	.share-mushroom{
