--- a/src/feihe/css/index.css
+++ b/src/feihe/css/index.css
@@ -1510,7 +1510,7 @@ html, body { width: 100%; height: 100%; overflow: hidden; background: #ffffff; }
 
 .container { position: relative; width: 100%; height: 100%; overflow: hidden; }
 
-.page { position: absolute; left: 0; top: 0; z-index: 10; width: 100%; height: 100%; background: url(../images/loadingBg.png) #000000 no-repeat center top/cover; }
+.page { position: absolute; left: 0; top: 0; z-index: 10; width: 100%; height: 100%; min-height: 500px; background: url(../images/loadingBg.png) #000000 no-repeat center top/cover; }
 
 img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 
@@ -1562,7 +1562,7 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .message .message-box .date input { border: none; background: none; width: 2.8rem; text-align: right; font-size: .8rem; letter-spacing: .08rem; color: #dfdfdf; }
 
-.message .message-box .date input.month { margin-left: 1rem; }
+.message .message-box .date input.month { margin-left: .8rem; width: 1.32rem; }
 
 .message .message-box .date span { margin-left: .2rem; font-size: .6rem; color: #dfdfdf; }
 
@@ -1636,6 +1636,12 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .templet .uploadBox .swiper-container .upload-area .word-area.word-area1 .p4 span { color: #df0606; }
 
+.templet .uploadBox .swiper-container .upload-area .word-area.word-area1 .qrcodes { position: absolute; bottom: 9.5%; right: 3.6%; width: 1.4rem; height: 1.4rem; }
+
+.templet .uploadBox .swiper-container .upload-area .word-area.word-area1 .qrcodes p { text-align: center; font-size: .28rem; color: #4a351d; }
+
+.templet .uploadBox .swiper-container .upload-area .word-area.word-area1 .qrcodes img { display: block; width: 100%; }
+
 .templet .uploadBox .swiper-container .upload-area .word-area.word-area2 .vertical { position: absolute; top: 5.4%; left: 8%; height: 5.2rem; -webkit-writing-mode: tb-rl; -ms-writing-mode: tb-rl; writing-mode: tb-rl; }
 
 .templet .uploadBox .swiper-container .upload-area .word-area.word-area2 .vertical .word { padding: 0 .08rem; border-left: .02rem solid #3c0300; font-size: .36rem; color: #959595; }
@@ -1643,6 +1649,12 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 .templet .uploadBox .swiper-container .upload-area .word-area.word-area2 .vertical .word span { color: #ff0000; }
 
 .templet .uploadBox .swiper-container .upload-area .word-area.word-area2 .p7 { position: absolute; top: 44%; left: 59.2%; width: 2.8rem; text-align: center; letter-spacing: .2rem; font-size: .36rem; color: #f85645; }
+
+.templet .uploadBox .swiper-container .upload-area .word-area.word-area2 .qrcodes { position: absolute; bottom: 7.3%; right: 7.9%; width: 1.8rem; height: 1.8rem; }
+
+.templet .uploadBox .swiper-container .upload-area .word-area.word-area2 .qrcodes p { text-align: center; font-size: .28rem; color: #616161; }
+
+.templet .uploadBox .swiper-container .upload-area .word-area.word-area2 .qrcodes img { display: block; width: 100%; }
 
 .templet .uploadBox .swiper-container .upload-area .word-area.word-area3 .vertical { position: absolute; top: 69.3%; left: 41.5%; height: 5.2rem; -webkit-writing-mode: tb-rl; -ms-writing-mode: tb-rl; writing-mode: tb-rl; }
 
@@ -1652,7 +1664,15 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .templet .uploadBox .swiper-container .upload-area .word-area.word-area3 .p7 { position: absolute; top: 78%; left: 34%; letter-spacing: .2rem; font-size: .36rem; color: #595959; -webkit-writing-mode: tb-rl; -ms-writing-mode: tb-rl; writing-mode: tb-rl; }
 
+.templet .uploadBox .swiper-container .upload-area .word-area.word-area3 .qrcodes { position: absolute; bottom: 17.8%; left: 11.2%; width: 1.6rem; height: 1.6rem; }
+
+.templet .uploadBox .swiper-container .upload-area .word-area.word-area3 .qrcodes p { text-align: center; font-size: .28rem; color: #dd453d; }
+
+.templet .uploadBox .swiper-container .upload-area .word-area.word-area3 .qrcodes img { display: block; width: 100%; }
+
 .templet .uploadBox .fileUpload { position: absolute; left: 0; top: 0; z-index: 5; display: block; width: 100%; height: 100%; opacity: 0; }
+
+.templet .qrcode { display: none; }
 
 .share { z-index: 11; background-image: url(../images/shareBg.png); }
 
@@ -1689,3 +1709,9 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 .cover .cover-cloud { position: absolute; top: 5.4%; right: 0; width: 4.96rem; }
 
 .cover .cover-crane { position: absolute; top: 0.9%; right: 12%; width: 2.24rem; }
+
+.messageCover { display: none; z-index: 12; background: rgba(0, 0, 0, 0.8); }
+
+.messageCover .warn { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; width: 100%; height: 100%; }
+
+.messageCover .warn img { display: block; width: 9.44rem; }
