--- a/src/feihe/scss/index.scss
+++ b/src/feihe/scss/index.scss
@@ -20,6 +20,7 @@ html,body{
 	z-index: 10;
 	width: 100%;
 	height: 100%;
+	min-height: 500px;
 	background: url(../images/loadingBg.png) #000000 no-repeat center top/cover;
 }
 img{
@@ -171,7 +172,8 @@ img{
 				letter-spacing: .08rem;
 				color: #dfdfdf;
 				&.month{
-					margin-left: 1rem;
+					margin-left: .8rem;
+					width: 1.32rem;
 				}
 			}
 			span{
@@ -403,6 +405,22 @@ img{
 								color: #df0606;
 							}
 						}
+						.qrcodes{
+							position: absolute;
+							bottom: 9.5%;
+							right: 3.6%;
+							width: 1.4rem;
+							height: 1.4rem;
+							p{
+								text-align: center;
+								font-size: .28rem;
+								color: #4a351d;
+							}
+							img{
+								display: block;
+								width: 100%;
+							}
+						}
 					}
 					&.word-area2{
 						.vertical{
@@ -430,6 +448,22 @@ img{
 							letter-spacing: .2rem;
 							font-size: .36rem;
 							color: #f85645;
+						}
+						.qrcodes{
+							position: absolute;
+							bottom: 7.3%;
+							right: 7.9%;
+							width: 1.8rem;
+							height: 1.8rem;
+							p{
+								text-align: center;
+								font-size: .28rem;
+								color: #616161;
+							}
+							img{
+								display: block;
+								width: 100%;
+							}
 						}
 					}
 					&.word-area3{
@@ -459,6 +493,22 @@ img{
 							color: #595959;
 							writing-mode:tb-rl;
 						}
+						.qrcodes{
+							position: absolute;
+							bottom: 17.8%;
+							left: 11.2%;
+							width: 1.6rem;
+							height: 1.6rem;
+							p{
+								text-align: center;
+								font-size: .28rem;
+								color: #dd453d;
+							}
+							img{
+								display: block;
+								width: 100%;
+							}
+						}
 					}
 				}
 				// .fileUpload{
@@ -483,6 +533,9 @@ img{
 			height: 100%;
 			opacity: 0;
 		}
+	}
+	.qrcode{
+		display: none;
 	}
 }
 // 分享页
@@ -589,5 +642,22 @@ img{
 		top: 0.9%;
 		right: 12%;
 		width: 2.24rem;
+	}
+}
+// 信息提示页
+.messageCover{
+	display: none;
+	z-index: 12;
+	background: rgba(0,0,0,.8);
+	.warn{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		height: 100%;
+		img{
+			display: block;
+			width: 9.44rem;
+		}
 	}
 }
