--- a/src/feihe/css/index.css
+++ b/src/feihe/css/index.css
@@ -1514,7 +1514,9 @@ html, body { width: 100%; height: 100%; overflow: hidden; background: #ffffff; }
 
 img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 
-.loading { z-index: 13; background-image: url(../images/loadingBg.png); }
+.loading { z-index: 13; background-color: #df3d3b; }
+
+.loading.active { background-image: url(../images/loadingBg.png); background-color: #000000; }
 
 .loading .loadingTitle { position: absolute; bottom: 7.6%; left: 0; width: 100%; }
 
@@ -1692,7 +1694,7 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .share .share-stone { position: absolute; bottom: 0; left: 0; width: 100%; }
 
-.share .share-crane { position: absolute; bottom: 10.4%; right: 0; z-index: 12; width: 4.2rem; }
+.share .share-crane { position: absolute; bottom: 10.4%; right: 0; width: 4.2rem; }
 
 .share .share-mushroom { position: absolute; bottom: 0; right: 0; width: 100%; }
 
