--- a/src/feihe/css/index.css
+++ b/src/feihe/css/index.css
@@ -322,7 +322,7 @@ template { display: none; }
   44.4% { -webkit-transform: skewX(-3.125deg) skewY(-3.125deg); transform: skewX(-3.125deg) skewY(-3.125deg); }
   55.5% { -webkit-transform: skewX(1.5625deg) skewY(1.5625deg); transform: skewX(1.5625deg) skewY(1.5625deg); }
   66.6% { -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg); transform: skewX(-0.78125deg) skewY(-0.78125deg); }
-  77.7% { -webkit-transform: skewX(0.39063deg) skewY(0.39063deg); transform: skewX(0.39063deg) skewY(0.39063deg); }
+  77.7% { -webkit-transform: skewX(0.39062deg) skewY(0.39062deg); transform: skewX(0.39062deg) skewY(0.39062deg); }
   88.8% { -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg); transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
 
 @keyframes jello { from, 11.1%, to { -webkit-transform: none; transform: none; }
@@ -331,7 +331,7 @@ template { display: none; }
   44.4% { -webkit-transform: skewX(-3.125deg) skewY(-3.125deg); transform: skewX(-3.125deg) skewY(-3.125deg); }
   55.5% { -webkit-transform: skewX(1.5625deg) skewY(1.5625deg); transform: skewX(1.5625deg) skewY(1.5625deg); }
   66.6% { -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg); transform: skewX(-0.78125deg) skewY(-0.78125deg); }
-  77.7% { -webkit-transform: skewX(0.39063deg) skewY(0.39063deg); transform: skewX(0.39063deg) skewY(0.39063deg); }
+  77.7% { -webkit-transform: skewX(0.39062deg) skewY(0.39062deg); transform: skewX(0.39062deg) skewY(0.39062deg); }
   88.8% { -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg); transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
 
 .jello { -webkit-animation-name: jello; animation-name: jello; -webkit-transform-origin: center; -ms-transform-origin: center; transform-origin: center; }
@@ -1506,17 +1506,17 @@ template { display: none; }
 
 .slideOutUp { -webkit-animation-name: slideOutUp; animation-name: slideOutUp; }
 
-html, body { width: 100%; height: 100%; overflow: hidden; background: #ffffff; }
+html, body { width: 100%; height: 100%; overflow: hidden; background-color: #e2413f; }
 
 .container { position: relative; width: 100%; height: 100%; overflow: hidden; }
 
-.page { position: absolute; left: 0; top: 0; z-index: 10; width: 100%; height: 100%; min-height: 500px; background: url(../images/loadingBg.png) #000000 no-repeat center top/cover; }
+.page { position: absolute; left: 0; top: 0; z-index: 10; width: 100%; height: 100%; }
 
 img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 
-.loading { z-index: 13; background-color: #df3d3b; }
+.loading { z-index: 13; background-image: url(../images/loading.jpg); -webkit-background-size: 100% 100%; background-size: 100%; background-position: left top; background-color: #e2413f; }
 
-.loading.active { background-image: url(../images/loadingBg.png); background-color: #000000; }
+.loading .loadingBg { position: absolute; left: 0; top: 0; width: 100%; height: 100%; background: url(../images/loadingBg.png) no-repeat center; -webkit-background-size: 100% 100%; background-size: 100%; }
 
 .loading .loadingTitle { position: absolute; bottom: 7.6%; left: 0; width: 100%; }
 
@@ -1528,7 +1528,7 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .loading .loadingTitle .loading1 { width: 2.72rem; }
 
-.brief { z-index: 11; background-image: url(../images/briefBg.png); }
+.brief { z-index: 11; background-image: url(../images/bgMain.jpg); -webkit-background-size: 100% 100%; background-size: 100%; background-position: left top; background-repeat: no-repeat; background-color: #e2413f; }
 
 .brief img { display: block; width: 100%; }
 
@@ -1717,3 +1717,7 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 .messageCover .warn { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; width: 100%; height: 100%; }
 
 .messageCover .warn img { display: block; width: 9.44rem; }
+
+.slide-container .slide-page { background-position: left top; margin: 0; padding: 0; }
+
+.slide-container .slide-page.transition { -webkit-transition: all 3s; -o-transition: all 3s; transition: all 3s; }
