--- a/src/feihe/scss/index.scss
+++ b/src/feihe/scss/index.scss
@@ -320,14 +320,22 @@ img{
 		right: 3.4%;
 		width: .88rem;
 	}
-	.uploadBox{
+	.slideWrapper {
 		position: absolute;
-		top: 15.5%;
-		left: 50%;
+		left: 0;
+		top: 0;
 		z-index: 1;
+		width: 100%;
+		height: 100%;
+		padding-bottom: 1.6rem /* 40/25 */;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}	
+	.uploadBox{
 		width: 10.74rem;
 		height: 16.32rem;
-		transform: translate3d(-50%,0,0);
+		position: relative;
 		.swiper-container{
 			position: absolute;
 			top: 0;
