--- a/src/feihe/scss/index.scss
+++ b/src/feihe/scss/index.scss
@@ -2,14 +2,23 @@
 html,body{
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
-	background-color: #e2413f;
+	background-color: #db3f3c;
 }
 .container{
 	position: relative;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
+}
+.glbYun1 {
+	width: 10.48rem /* 262/25 */;
+	position: absolute;
+	right: -6.2rem /* 130/25 */;
+	top: 94%;
+	z-index: 40;
+	transition: top 3s;
+	&.active {
+		top: -20px;
+	}
 }
 // page通用样式
 .page {
@@ -39,6 +48,12 @@ img{
 		height: 100%;
 		background: url(../images/loadingBg.png) no-repeat center;
 		background-size: 100%;
+	}
+	.brief-cloud12{
+		position: absolute;
+		bottom: 0;
+		right: -6.4rem /* 60/25 */;
+		width: 10.48rem /* 262/25 */;
 	}
 	.loadingTitle{
 		position: absolute;
@@ -70,6 +85,18 @@ img{
 			width: 2.72rem;
 		}
 	}
+	.yun1 {
+		position: absolute;
+		bottom: 3.52rem /* 88/25 */;
+		left: -2.2rem /* 30/25 */;
+		width: 4.88rem /* 122/25 */;
+	}
+	.yun2 {
+		width: 9.28rem /* 232/25 */;
+		position: absolute;
+		right: -5.2rem /* 130/25 */;
+		top: 6.4rem /* 160/25 */;
+	}
 }
 // 简介页
 .brief{
@@ -79,6 +106,7 @@ img{
 	background-position: left top;
 	background-repeat: no-repeat;
 	background-color: #e2413f;
+	
 	img{
 		display: block;
 		width: 100%;
@@ -92,8 +120,8 @@ img{
 	.brief-cloud1{
 		position: absolute;
 		top: 0;
-		right: 0;
-		width: 5.88rem;
+		right: -6.4rem /* 60/25 */;
+		width: 10.48rem /* 262/25 */;
 	}
 	.brief-cloud2{
 		position: absolute;
@@ -116,7 +144,7 @@ img{
 	}
 	.brief-cloud3{
 		position: absolute;
-		bottom: 0;
+		bottom: -14rem /* 350/25 */;
 		right: 0;
 		width: 86.5%;
 	}
@@ -141,12 +169,22 @@ img{
 		left: 0;
 		width: 100%;
 	}
-	.message-crane{
+	.infoBoxZ {
 		position: absolute;
+		left: 0;
 		top: 0;
-		left: 53.3%;
-		width: 1.24rem;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 	}
+	// .message-crane{
+	// 	position: absolute;
+	// 	top: 0;
+	// 	left: 53.3%;
+	// 	width: 1.24rem;
+	// }
 	.message-lantern{
 		position: absolute;
 		top: 6.1%;
@@ -240,6 +278,7 @@ img{
 		bottom: 0;
 		left: 0;
 		width: 96.6%;
+		z-index: 3;
 	}
 	.message-cloud2{
 		position: absolute;
